# InsightEngine

./: README.md  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py  nlp.py
dashboard/: ui.py
scraper/: engine.py
