[project]
name = "insight-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.128.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "nltk>=3.9.2",
    "pandas<3.0.0",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.35.0",
]
